--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-virtual": "^2.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.0.0",
     "svelte-windicss-preprocess": "^4.1.1",
     "vite": "^2.6.13",
